[package]
name = "chrome-ext"
version = "0.1.0"
authors = ["Andrew Newlands <andrew_newlands@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-core", "io-std", "macros"] }
tokio-util={ version = "0.3", features= ["codec"]}
futures="0.3"
futures-util="0.3"
serde_json="1.0"
bytes="0.5"
lapin = { version = "0.32", features = [ "futures" ]}
env_logger = "0.7"
log = "0.4"
uuid={ version = "0.8", features = ["v4"] }